Add exportCSV parser The exportCSV parser takes the array of events from each game's session data and creates a tab-separated CSV for the user to download. This CSV is named using the same unique ID as the JSON that the session data was stored in. Currently, the columns in the CSV are: (from left to right) timestamp, type, and details.
Related changes:
 - Add unique ID (filename) as an attribute of the exported JSON data.
 - Catch events which are submitted without type/details, and define the
    missing attribute as "no type"/"no details".

--- a/exportCSV.html
+++ b/exportCSV.html
@@ -5,6 +5,8 @@
 		<title>exportCSV parser</title>
 	</head>
 	<body>
-		This is the exportCSV parser.
+		<p>The CSV downloads are below.</p>
+		<ul id="linklist"></ul>
 	</body>
+	<script src="exportCSV.js"></script>
 </html>
