Add playbackGame parser The playbackGame parser takes the player actions and feeds them into a modified copy of the original Tetris game, to display the game in real time. It uses the player actions to create a queue of events with timestamps, and has each one trigger the next (with a delay).
The Tetris game has been modified to ignore player input, and the timer for
the piece dropping over time has been deactivated. In addition, the module
around the code has been removed, to allow the parser to affect the internal
mechanics of the game.

Other changes:
 - replace the player action log with two separate logs for keydown and keyup
   - this is necessary to determine how many times the event should repeat

Known issues:
 - playback continues even when it pauses on defocus
 - switching between session files causes both to run in parallel
 - sliding pieces along the bottom is not properly reproduced in playback

--- a/parsing.html
+++ b/parsing.html
@@ -50,6 +50,10 @@
 						<td><input type="radio" name="parser" value="exportCSV" /></td>
 						<td>Export CSV files</td>
 					</tr>
+					<tr>
+						<td><input type="radio" name="parser" value="playbackGame" /></td>
+						<td>Playback games</td>
+					</tr>
 				</table>
 				<input type="button" value="Back" onClick="backToFileSelection();" />
 				<input type="submit" value="Next" onClick="submitParserSelection(this.form);" />
