Fix playbackGame crash due to missing shadow canvas This commit adds a shadow canvas to the playbackGame HTML. It had been removed for simplicity, since shadows are not displayed, but this caused a crash because the Javascript still expects the shadow canvas. A future commit will remove both the shadow canvas and any references to it, as well as other unneeded code in the playbackTetris.js file.

--- a/playbackGame.html
+++ b/playbackGame.html
@@ -20,6 +20,7 @@
 		Your browser does not support HTML5 Canvas.
 		</canvas>
 		<canvas id="animated_canvas" width="120" height="250" style="position:fixed; left:10px; top:10px; z-index:3"></canvas>
+		<canvas id="shadow_canvas" width="120" height="250" style="position:fixed; left:10px; top:10px; z-index:2"></canvas>
 		<canvas id="next_canvas" width="120" height="250" style="position:fixed; left:10px; top:10px; z-index:2"></canvas>
 
 		<div style="position: fixed; top:10px; font-family:Sans-serif; font-size:30px">Lines cleared: <span id="score" >0</span></div>
