Add exportStats parser The exportStats parser is intended to be used for data processing and analysis. It outputs a CSV for each session, with each line corresponding to a board state. The user may select which statistics they want calculated for each board.
Currently the parser only includes a single statistics function, which counts
the number of filled cells. However, because the parser requires at least two
functions in the form, it is displayed twice currently.

Related changes:
 - The log for the board has been moved to after lines are cleared, as this is
    the state the board is in when the next piece appears.
 - The line clear event is now only triggered when one or more lines are
    cleared. Previously it was triggered every time the game checked for a line
    clear.

--- a/parsing.html
+++ b/parsing.html
@@ -54,6 +54,10 @@
 						<td><input type="radio" name="parser" value="playbackGame" /></td>
 						<td>Playback games</td>
 					</tr>
+					<tr>
+						<td><input type="radio" name="parser" value="exportStats" /></td>
+						<td>Export statistics</td>
+					</tr>
 				</table>
 				<input type="button" value="Back" onClick="backToFileSelection();" />
 				<input type="submit" value="Next" onClick="submitParserSelection(this.form);" />
