Add functions for exportStats parser, add separator select This commit adds several statistics functions to the exportStats parser. Each of these functions returns a numerical value for each board as follows:  - countCells: number of filled cells  - countHoles: number of empty cells with full cells above them  - highestPiece: height of highest piece  - averageHeight: average of column heights
To make these functions simpler, I converted the logged board to a 2D array
rather than a 1D array. This in turn required a tweak to the displayBoards
parser.

Other changes:
 - Add CSV separator selection, allowing the user to choose how the entries in
    the exported CSV are separated. This is a change that could be applied to
    the exportCSV parser as well, if it becomes useful.
 - Clear the list of downloads on resubmit. Previously, resubmitting the
    function options would result in a duplicate list of downloads below the
    first one.

--- a/exportStats.html
+++ b/exportStats.html
@@ -5,16 +5,39 @@
 		<title>exportCSV parser</title>
 	</head>
 	<body>
-		<p>Choose the statistics you would like calculated for each board.</p>
 		<form onSubmit="return false;">
+			<p>Choose the statistics you would like calculated for each board.</p>
 			<table>
 				<tr>
 					<td><input type="checkbox" name="func" value="countCells" /></td>
 					<td>Count cells</td>
 				</tr>
-				<tr display="none">
-					<td><input type="checkbox" name="func" value="countCells" /></td>
-					<td>Count cells</td>
+				<tr>
+					<td><input type="checkbox" name="func" value="countHoles" /></td>
+					<td>Count holes</td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="func" value="highestPiece" /></td>
+					<td>Highest piece</td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="func" value="averageHeight" /></td>
+					<td>Average height</td>
+				</tr>
+			</table>
+			<p>Choose the separators you would like for the CSV.
+			<table>
+				<tr>
+					<td><input type="checkbox" name="separator" value="," checked /></td>
+					<td>Comma (,)</td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="separator" value="\t" /></td>
+					<td>Tab (&nbsp;&nbsp;&nbsp;&nbsp;)</td>
+				</tr>
+				<tr>
+					<td><input type="checkbox" name="separator" value=" " /></td>
+					<td>Space (	)</td>
 				</tr>
 			</table>
 			<input type="submit" onClick="chooseFunctions(this.form);" value="Continue"/>
