--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<style>
 			body {
 				font-family: sans-serif;
+				padding-left: 15px;
 			}
 			table {
 				border-collapse: collapse;
@@ -14,9 +15,55 @@
 				padding: 5px;
 				border: 1px solid gray;
 			}
+
+			#warning{
+				font-family: Arial;
+				font-size: 20px;
+			}
+
+			#msg_n, #msg_s {
+
+				/* set it to fill the whil screen */
+				-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+				-moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+				
+				/* css3 border radius */
+				-moz-border-radius: 5px;
+			    -webkit-border-radius: 5px;
+				
+				background:#eee;
+
+				font-size:40px;
+				z-index:5000; 
+
+			}
+
+			.ui-dialog .ui-dialog-content {
+				font-family:Arial;
+    			padding: 30px;
+			}
+
 		</style>
+
+<!-- 		 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+		 <link rel="stylesheet" href="/resources/demos/style.css"> -->
+
+
+
 	</head>
 	<body>
+		<div id="msg_n">
+  			This is for cond=n
+  			<hr>
+  			<div id= "warning">You can only close this dialog box after five seconds.</div>
+		</div>
+
+		<div id="msg_s">
+  			This is for cond=s
+  			<hr>
+  			<div id= "warning">You can only close this dialog box after five seconds.</div>
+		</div>
+
 		<h1>Tetris</h1>
 		<h2>Rules</h2>
 		<p>
@@ -60,5 +107,56 @@
 			Thanks, and have fun!
 		</p>
 		<a href="game.html">Play Game</a>
+
+		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+		<script type="text/javascript">
+
+		var startTime = new Date();
+
+		function showDialog(msg) {
+    		$(msg).dialog({
+    			draggable:false,
+    			autoOpen: true,
+				modal: true,
+				width: $(window).width(),
+				height: $(window).height(),
+				beforeClose: function(){
+					var now = new Date();
+					if (now.getTime()- startTime.getTime() <= 5000)
+						return false;
+					else
+						return true;
+  				 }
+    		});
+  		}
+
+		//send message to screen before showing instructions
+		// var strn = "This is the message for condition = n";
+		// var strs = "This is the message for condition = s";
+		var condition;
+		var URL = window.location.href;
+		//var URL = "tiltfactor1.dartmouth.edu/test/tetris?c=n&variable2=something&variable3=something";
+    	var breakURL = URL.split("?");
+    	var variables = breakURL[1].split("&")
+    	for (j in variables) {
+    		console.log(variables[j]);
+    		var i = variables[j].split("=");
+    		if (i[0] == "c")
+    			condition = i[1];
+    	}
+
+		if (condition == "n") {
+			$(document.getElementById('msg_s')).hide();
+			showDialog("#msg_n");
+		}
+
+		else if (condition == "s") {
+			$(document.getElementById('msg_n')).hide();
+			showDialog("#msg_s");
+		}
+
+		</script>
 	</body>
 </html>
