--- a/game.html
+++ b/game.html
@@ -26,11 +26,6 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 
 	<title>Tetris!</title>
 
-	<!-- strokeText.js from http://www.netzgesta.de/dev/text/#overview
-
-	I need to switch to displaying game messages using regular elements rather than scrawling on canvas
-
-	-->
 	<script src="strokeText.js"></script>
 
 	<link rel="stylesheet" href="page.css" type="text/css" />
@@ -56,19 +51,11 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 		}
 	</style>
 
-
-	<!-- <script src='style/prettify/prettify.js'></script>
-	<link href="style/prettify.css" rel="stylesheet" type="text/css" />
-
-	<script>Event.observe(window, 'load', function() {prettyPrint()});</script> -->
-
 	<script src='tetris.js' type="text/javascript"></script>
 	<script type='text/javascript'>
 		TETRIS.setScoreIncreasing();
 	</script>
-
 </head>
-
 
 <body>
 
@@ -82,12 +69,10 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 	<canvas id="next_canvas" width="120" height="250" style="position:fixed; left:10px; top:10px; z-index:2"></canvas>
 	<!-- <div id="placeholder" style=""> </div> -->
 
-	<div style="position: fixed; top:10px; font-family:Sans-serif; font-size:30px">Lines cleared: <span id="score" >0</span></div>
+	<div style="position: fixed; top:10px; font-family:Sans-serif; font-size:25px">Lines cleared: <span id="score" >0</span></div>
 
-	<div style = "position: fixed; top:120px; left: 300px; font-family: sans-serif; font-size: 30px">Game ends in <span id="time"></span> minutes!</div>
-
-
-
+	<div style = "position: fixed; top:120px; left: 300px; font-family: sans-serif; font-size: 25px">Game ends in <span id = "timer"></span>
+	</div>
 	<table id="controls">
 		<tr>
 			<th>Control</th>
@@ -114,35 +99,14 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 			<td>Immediately drop piece</td>
 		</tr>
 	</table>
-
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	
+	<script src = 'timer.js' type="text/javascript"></script>
 	<script type="text/javascript">
-
-		function startTimer(duration, display) {
-	    	var timer = duration, minutes, seconds;
-	    	setInterval(function () {
-	        minutes = parseInt(timer / 60, 10);
-	        seconds = parseInt(timer % 60, 10);
-
-	        minutes = minutes < 10 ? "0" + minutes : minutes;
-	        seconds = seconds < 10 ? "0" + seconds : seconds;
-
-	        display.text(minutes + ":" + seconds);
-
-	        if (--timer < 0) {
-	            timer = 0;
-        	}
-   		 }, 1000);
-		}
-
-		jQuery(function ($) {
-		    var fiveMinutes = 9, 
-		        display = $('#time');
-		    startTimer(fiveMinutes, display);
-		});
-
+		countdown(5);
 	</script>
+
+
+
 <!-- <div id="instructions" style='position: relative'>
 
 
