--- a/game.html
+++ b/game.html
@@ -25,12 +25,15 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 	<meta names="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
 	<title>Tetris!</title>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>
 	<script src="strokeText.js"></script>
 
 <!-- 	<link rel="stylesheet" href="page.css" type="text/css" /> -->
 
+
 	<style type="text/css"> /* These are just for finger debug elements */
+		button {font-size: 120%; margin: 0; vertical-align: baseline; *vertical-align: middle;}
 		.finger-indicator {
 			position: absolute;
 			z-index: 4;
@@ -49,6 +52,56 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 			padding: 5px;
 			border: 1px solid gray;
 		}
+
+		.ui-dialog {
+		  padding-top: 20px;
+		  padding-left: 40px;
+		  padding-right: 40px;
+		  padding-bottom: 40px;
+		  position: absolute;
+		  background: #DCDCDC;
+		  border: 1px solid #808080;
+		  -webkit-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.5);
+		  -moz-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.5);
+		  box-shadow: 0 0px 5px rgba(0, 0, 0, 0.5);
+		  -webkit-border-radius: 5px;
+		  -moz-border-radius: 5px;
+		  border-radius: 2px;
+		}
+
+		.ui-dialog-content {
+			font-family: sans-serif;
+    		font-size: 20px;
+		}
+
+		.ui-dialog-titlebar-close {
+		    display: none;
+		}
+
+		.ui-dialog-buttonpane {
+		  margin-top: 15px;
+		  margin-left: 200px;
+		}
+
+		#take_survey {
+			  color: #FFF;
+			  background-color: #0f5895;
+			  background-repeat: repeat-x;
+			  background-image: -khtml-gradient(linear, left top, left bottom, from(#377bb2), to(#0f5895));
+			  background-image: -moz-linear-gradient(top, #377bb2, #0f5895);
+			  background-image: -ms-linear-gradient(top, #377bb2, #0f5895);
+			  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #377bb2), color-stop(100%, #0f5895));
+			  background-image: -webkit-linear-gradient(top, #377bb2, #0f5895);
+			  background-image: -o-linear-gradient(top, #377bb2, #0f5895);
+			  background-image: linear-gradient(top, #377bb2, #0f5895);
+			  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#377bb2', endColorstr='#0f5895', GradientType=0);
+			  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+			  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+			  color: #ffffff;
+			  text-shadow: none;
+			  margin: 5px 10px 5px 0;
+		}
+
 	</style>
 
 
@@ -66,10 +119,9 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 	<canvas id="next_canvas" width="120" height="250" style="position:fixed; left:10px; top:10px; z-index:2"></canvas>
 	<!-- <div id="placeholder" style=""> </div> -->
 
-	<div style="position: fixed; top:10px; font-family:Sans-serif; font-size:25px">Lines cleared: <span id="score" >0</span></div>
+	<div style="position: fixed; top: 10px; font-family:Sans-serif; font-size:25px">Lines cleared: <span id="score" >0</span></div>
+	<div style = "position: fixed; font-family: sans-serif; font-size: 25px">Game ends in <span id = "timer"></span></div>
 
-	<div style = "position:fixed; top:300px; left:300px; font-family: sans-serif; font-size: 25px">Game ends in <span id = "timer"></span>
-	</div>
 	<table id="controls">
 		<tr>
 			<th>Control</th>
