--- a/game.html
+++ b/game.html
@@ -25,6 +25,7 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 	<meta names="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
 	<title>Tetris!</title>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>
 	<script src="strokeText.js"></script>
@@ -100,6 +101,16 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 			  color: #ffffff;
 			  text-shadow: none;
 			  margin: 5px 10px 5px 0;
+		}
+
+		.pulse {
+			font-size:30px;
+
+		}
+
+		.time-up {
+			font-size:0px;
+			color:red;
 		}
 
 	</style>
