--- a/game.html
+++ b/game.html
@@ -131,7 +131,7 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 	<!-- <div id="placeholder" style=""> </div> -->
 
 	<div style="position: fixed; top: 10px; font-family:Sans-serif; font-size:25px">Lines cleared: <span id="score" >0</span></div>
-	<div style = "position: fixed; font-family: sans-serif; font-size: 25px">Game ends in <span id = "timer"></span></div>
+	<div style = "position: fixed; font-family: sans-serif; font-size: 25px"><br>Game ends in <span id = "timer"></span></div>
 
 	<table id="controls">
 		<tr>
@@ -162,7 +162,7 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 
 	<script src='tetris.js' type="text/javascript"></script>
 	<script type='text/javascript'>
-		countdown(5);
+		countdown(1);
 		TETRIS.setScoreIncreasing();
 	</script>
 
