Change styling of countdown timer, set to 1 minute

--- a/game.html
+++ b/game.html
@@ -104,7 +104,8 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 		}
 
 		.pulse {
-			font-size:30px;
+			font-size:40px;
+			color: red;
 
 		}
 
@@ -131,7 +132,7 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 	<!-- <div id="placeholder" style=""> </div> -->
 
 	<div style="position: fixed; top: 10px; font-family:Sans-serif; font-size:25px">Lines cleared: <span id="score" >0</span></div>
-	<div style = "position: fixed; font-family: sans-serif; font-size: 25px"><br>Game ends in <span id = "timer"></span></div>
+	<div style = "text-align: center; position: fixed; font-family: sans-serif; font-size: 25px">Game ends in<br><span style = "font-size:30px;" id = "timer"></span></div>
 
 	<table id="controls">
 		<tr>
