Properly pass condition from index to game and out

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     	
     	console.log ("QID is "+qualtricsID);
     	
-    	document.getElementById("play-game-link").innerHTML = "Play Game".link("game.html?qid="+qualtricsID);
+    	document.getElementById("play-game-link").innerHTML = "Play Game".link("game.html?c="+condition+"qid="+qualtricsID);
 
 		$.timeoutDialog({timeout: 1, countdown: 20, msg: mymsg});
 
