Remove language about winning after 20 lines

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 			displays the next piece. 
 		</p>
 		<p>
-			When a row is completely filled, it will be removed from the board. Clear 20 lines to win!
+			When a row is completely filled, it will be removed from the board. Clear as many lines as
+			you can in 5 minutes.
 		</p>
 		<h2>Controls</h2>
 		<table>
